# ai-ops-platform

./: docker-compose.yml
analysis/: Dockerfile  pyproject.toml  requirements.txt
analysis/src/analyzers/: dependency_analyzer.py  log_analyzer.py  pattern_analyzer.py
analysis/src/models/: bert_analyzer.py  random_forest.py
analysis/src/recommenders/: ai_recommender.py
analysis/src/services/: analysis_service.py  root_cause_analyzer_bad.py  root_cause_analyzer_service.py
api/src/: main.py
api/src/routers/: analysis.py  anomaly.py  iac.py  incidents.py  metrics.py  remediation.py
common/src/config/: settings.py
common/src/models/: data_models.py
common/src/utils/: logging.py  metrics.py
detection/: Dockerfile  pyproject.toml  requirements.txt
detection/src/collectors/: log_collector.py  prometheus_collector.py
detection/src/models/: lstm_detector.py  statistical_detector.py
detection/src/processors/: alert_manager.py  metric_processor.py
detection/src/services/: anomaly_detector_bad.py  anomaly_detector_service.py  detection_service.py
docs/: components-overview.mmd  system-logical-architecture.mmd  system-overview.mmd  system-physical-architecture.mmd
docs/analysis/analyzers/: dependency-analyzer-class.mmd  dependency-analyzer-flow.mmd  dependency-analyzer-seq.mmd  log-analyzer-class.mmd  log-analyzer-flow.mmd  log-analyzer-seq.mmd  pattern-analyzer-class.mmd  pattern-analyzer-flow.mmd  pattern-analyzer-seq.mmd
docs/analysis/models/: bert-analyzer-class.mmd  bert-analyzer-flow.mmd  bert-analyzer-seq.mmd  random-forest-class.mmd  random-forest-flow.mmd  random-forest-seq.mmd
docs/analysis/recommenders/: ai-recommender-class.mmd  ai-recommender-flow.mmd  ai-recommender-seq.mmd
docs/analysis/services/: analysis-service-class.mmd  analysis-service-flow.mmd  analysis-service-seq.mmd  root-cause-analyzer-service-class.mmd  root-cause-analyzer-service-flow.mmd
docs/common/config/: database.mmd  settings-class.mmd  settings-flow.mmd  settings-seq.mmd
docs/detection/collectors/: log-collector-class.mmd  log-collector-flow.mmd  log-collector-seq.mmd  prometheus-collector-class.mmd  prometheus-collector-flow.mmd  prometheus-collector-seq.mmd
docs/detection/models/: lstm-detector-class.mmd  lstm-detector-flow.mmd  (+4 more)
remediation/: Dockerfile  pyproject.toml  requirements.txt
remediation/src/generators/: ansible_generator.py  terraform_generator.py
remediation/src/services/: iac_generator_service.py  iac_generator_service_bad.py  remediation_service.py  solution_generator_bad.py  solution_generator_service.py
remediation/src/validators/: ansible_validator.py  terraform_validator.py
scripts/: deploy.sh  setup.sh
(+37 files in other folders)
