[tool.poetry]
name = "analysis-service"
version = "0.1.0"
description = "AI-Driven Root Cause Analysis Service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
scikit-learn = "^1.0.2"
tensorflow = "^2.8.0"
transformers = "^4.18.0"
torch = "^1.11.0"
networkx = "^2.6.3"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
prometheus-client = "^0.12.0"
elasticsearch = "^7.17.0"
python-json-logger = "^2.0.2"
pydantic = "^1.8.2"
textblob = "^0.15.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"
black = "^22.3.0"
isort = "^5.9.3"
flake8 = "^4.0.1"
mypy = "^0.910"
docker = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--verbose --cov=src --cov-report=term-missing"
asyncio_mode = "auto"
